.metadata/.plugins/org.eclipse.cdt.ui/250626_Treadmill_last.build.log
15:02:48 **** Incremental Build of configuration Debug for project 250626_Treadmill_last ****
make -j16 all 
arm-none-eabi-gcc "../Core/ap/src/Controller.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"D:/STM32/250626_Treadmill_last/Core/ap" -I"D:/STM32/250626_Treadmill_last/Core/driver" -I"D:/STM32/250626_Treadmill_last/Core/driver/Button" -I"D:/STM32/250626_Treadmill_last/Core/driver/FND" -I"D:/STM32/250626_Treadmill_last/Core/driver/LedBar" -I"D:/STM32/250626_Treadmill_last/Core/ap/src" -I"D:/STM32/250626_Treadmill_last/Core/driver/LCD" -I"D:/STM32/250626_Treadmill_last/Core/Src" -I"D:/STM32/250626_Treadmill_last/Core/Startup" -I"D:/STM32/250626_Treadmill_last/Core/ap/inc" -I"D:/STM32/250626_Treadmill_last/Core/driver/Buzzer" -I"D:/STM32/250626_Treadmill_last/Core/driver/DC_Motor" -I"D:/STM32/250626_Treadmill_last/Core/driver/UltraSonic" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/ap/src/Controller.d" -MT"Core/ap/src/Controller.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/ap/src/Controller.o"
arm-none-eabi-gcc "../Core/ap/src/Listener.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"D:/STM32/250626_Treadmill_last/Core/ap" -I"D:/STM32/250626_Treadmill_last/Core/driver" -I"D:/STM32/250626_Treadmill_last/Core/driver/Button" -I"D:/STM32/250626_Treadmill_last/Core/driver/FND" -I"D:/STM32/250626_Treadmill_last/Core/driver/LedBar" -I"D:/STM32/250626_Treadmill_last/Core/ap/src" -I"D:/STM32/250626_Treadmill_last/Core/driver/LCD" -I"D:/STM32/250626_Treadmill_last/Core/Src" -I"D:/STM32/250626_Treadmill_last/Core/Startup" -I"D:/STM32/250626_Treadmill_last/Core/ap/inc" -I"D:/STM32/250626_Treadmill_last/Core/driver/Buzzer" -I"D:/STM32/250626_Treadmill_last/Core/driver/DC_Motor" -I"D:/STM32/250626_Treadmill_last/Core/driver/UltraSonic" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/ap/src/Listener.d" -MT"Core/ap/src/Listener.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/ap/src/Listener.o"
arm-none-eabi-gcc "../Core/ap/src/Presenter.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"D:/STM32/250626_Treadmill_last/Core/ap" -I"D:/STM32/250626_Treadmill_last/Core/driver" -I"D:/STM32/250626_Treadmill_last/Core/driver/Button" -I"D:/STM32/250626_Treadmill_last/Core/driver/FND" -I"D:/STM32/250626_Treadmill_last/Core/driver/LedBar" -I"D:/STM32/250626_Treadmill_last/Core/ap/src" -I"D:/STM32/250626_Treadmill_last/Core/driver/LCD" -I"D:/STM32/250626_Treadmill_last/Core/Src" -I"D:/STM32/250626_Treadmill_last/Core/Startup" -I"D:/STM32/250626_Treadmill_last/Core/ap/inc" -I"D:/STM32/250626_Treadmill_last/Core/driver/Buzzer" -I"D:/STM32/250626_Treadmill_last/Core/driver/DC_Motor" -I"D:/STM32/250626_Treadmill_last/Core/driver/UltraSonic" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/ap/src/Presenter.d" -MT"Core/ap/src/Presenter.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/ap/src/Presenter.o"
arm-none-eabi-gcc "../Core/ap/src/ap_main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"D:/STM32/250626_Treadmill_last/Core/ap" -I"D:/STM32/250626_Treadmill_last/Core/driver" -I"D:/STM32/250626_Treadmill_last/Core/driver/Button" -I"D:/STM32/250626_Treadmill_last/Core/driver/FND" -I"D:/STM32/250626_Treadmill_last/Core/driver/LedBar" -I"D:/STM32/250626_Treadmill_last/Core/ap/src" -I"D:/STM32/250626_Treadmill_last/Core/driver/LCD" -I"D:/STM32/250626_Treadmill_last/Core/Src" -I"D:/STM32/250626_Treadmill_last/Core/Startup" -I"D:/STM32/250626_Treadmill_last/Core/ap/inc" -I"D:/STM32/250626_Treadmill_last/Core/driver/Buzzer" -I"D:/STM32/250626_Treadmill_last/Core/driver/DC_Motor" -I"D:/STM32/250626_Treadmill_last/Core/driver/UltraSonic" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/ap/src/ap_main.d" -MT"Core/ap/src/ap_main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/ap/src/ap_main.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"D:/STM32/250626_Treadmill_last/Core/ap" -I"D:/STM32/250626_Treadmill_last/Core/driver" -I"D:/STM32/250626_Treadmill_last/Core/driver/Button" -I"D:/STM32/250626_Treadmill_last/Core/driver/FND" -I"D:/STM32/250626_Treadmill_last/Core/driver/LedBar" -I"D:/STM32/250626_Treadmill_last/Core/ap/src" -I"D:/STM32/250626_Treadmill_last/Core/driver/LCD" -I"D:/STM32/250626_Treadmill_last/Core/Src" -I"D:/STM32/250626_Treadmill_last/Core/Startup" -I"D:/STM32/250626_Treadmill_last/Core/ap/inc" -I"D:/STM32/250626_Treadmill_last/Core/driver/Buzzer" -I"D:/STM32/250626_Treadmill_last/Core/driver/DC_Motor" -I"D:/STM32/250626_Treadmill_last/Core/driver/UltraSonic" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from D:/STM32/250626_Treadmill_last/Core/ap/inc/Listener.h:11,
                 from ../Core/ap/src/Listener.c:9:
D:/STM32/250626_Treadmill_last/Core/ap/inc/Controller.h:27:5: error: unknown type name 'TreadmillInputId_t'
   27 |     TreadmillInputId_t id;
      |     ^~~~~~~~~~~~~~~~~~
In file included from D:/STM32/250626_Treadmill_last/Core/ap/inc/Presenter.h:17,
                 from ../Core/ap/src/Presenter.c:7:
D:/STM32/250626_Treadmill_last/Core/ap/inc/Controller.h:27:5: error: unknown type name 'TreadmillInputId_t'
   27 |     TreadmillInputId_t id;
      |     ^~~~~~~~~~~~~~~~~~
make: *** [Core/ap/src/subdir.mk:37: Core/ap/src/Listener.o] Error 1
make: *** Waiting for unfinished jobs....
In file included from D:/STM32/250626_Treadmill_last/Core/ap/inc/Listener.h:11,
                 from D:/STM32/250626_Treadmill_last/Core/ap/inc/ap_main.h:13,
                 from ../Core/ap/src/ap_main.c:8:
D:/STM32/250626_Treadmill_last/Core/ap/inc/Controller.h:27:5: error: unknown type name 'TreadmillInputId_t'
   27 |     TreadmillInputId_t id;
      |     ^~~~~~~~~~~~~~~~~~
In file included from ../Core/ap/src/Controller.c:7:
D:/STM32/250626_Treadmill_last/Core/ap/inc/Controller.h:27:5: error: unknown type name 'TreadmillInputId_t'
   27 |     TreadmillInputId_t id;
      |     ^~~~~~~~~~~~~~~~~~
../Core/ap/src/Controller.c:10:12: error: static declaration of 'speed' follows non-static declaration
   10 | static int speed = 3;
      |            ^~~~~
In file included from D:/STM32/250626_Treadmill_last/Core/ap/inc/Presenter.h:18,
                 from D:/STM32/250626_Treadmill_last/Core/ap/inc/Controller.h:13:
D:/STM32/250626_Treadmill_last/Core/ap/inc/treadmill.h:28:12: note: previous declaration of 'speed' with type 'int'
   28 | extern int speed;
      |            ^~~~~
In file included from D:/STM32/250626_Treadmill_last/Core/ap/inc/Listener.h:11,
                 from D:/STM32/250626_Treadmill_last/Core/ap/inc/ap_main.h:13,
                 from ../Core/Src/main.c:28:
D:/STM32/250626_Treadmill_last/Core/ap/inc/Controller.h:27:5: error: unknown type name 'TreadmillInputId_t'
   27 |     TreadmillInputId_t id;
      |     ^~~~~~~~~~~~~~~~~~
../Core/ap/src/Controller.c: In function 'Treadmill_Controller_Excute':
../Core/ap/src/Controller.c:50:34: error: 'EMERGENCY' undeclared (first use in this function)
   50 |                 treadmillState = EMERGENCY;
      |                                  ^~~~~~~~~
../Core/ap/src/Controller.c:50:34: note: each undeclared identifier is reported only once for each function it appears in
../Core/ap/src/Controller.c:23:5: warning: enumeration value 'NO_RUNNING' not handled in switch [-Wswitch]
   23 |     switch (treadmillState)
      |     ^~~~~~
../Core/ap/src/Controller.c:56:5: error: too many arguments to function 'Presenter_DispLcdTreadmill'
   56 |     Presenter_DispLcdTreadmill(speed, treadmillState);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
D:/STM32/250626_Treadmill_last/Core/ap/inc/Presenter.h:23:6: note: declared here
   23 | void Presenter_DispLcdTreadmill(TreadmillState_t state);
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/ap/src/subdir.mk:37: Core/ap/src/ap_main.o] Error 1
../Core/ap/src/Presenter.c:46:6: warning: 'Presenter_DispStopWatch' defined but not used [-Wunused-function]
   46 | void Presenter_DispStopWatch(watch_t watchData)
      |      ^~~~~~~~~~~~~~~~~~~~~~~
../Core/ap/src/Presenter.c:40:6: warning: 'Presenter_DispTimeWatch' defined but not used [-Wunused-function]
   40 | void Presenter_DispTimeWatch(watch_t watchData)
      |      ^~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:46: Core/Src/main.o] Error 1
make: *** [Core/ap/src/subdir.mk:37: Core/ap/src/Controller.o] Error 1
make: *** [Core/ap/src/subdir.mk:37: Core/ap/src/Presenter.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

15:02:48 Build Failed. 14 errors, 3 warnings. (took 285ms)

